# QEFIEntryManager

./: .gitignore  .gitmodules  CLI_README.md  CMakeLists.txt  EFI_FILE_SELECTION_DIALOG.md  INTEGRATION_WITH_PR45.md  README.md  cli.cpp  cli.h  helpers.cpp  helpers.h  main.cpp  mainwindow.cpp  mainwindow.h  qefibootmgr.8  qefibootmgr.cpp  qefidpeditordialog.cpp  qefidpeditordialog.h  qefidpeditorview.cpp  qefidpeditorview.h  qefidpfields.cpp  qefidpfields.h  qefientry.cpp  qefientry.h  qefientrydetailview.cpp  qefientrydetailview.h  qefientrydpdetailview.cpp  qefientrydpdetailview.h  qefientrymanager-launcher  qefientrymanager.desktop  qefientrymanager.desktop.in  qefientryrebootview.cpp  qefientryrebootview.h  qefientrystaticlist.cpp  qefientrystaticlist.h  qefientryview.cpp  qefientryview.h  qefifileselectiondialog.cpp  qefifileselectiondialog.h  qefiloadoptioneditorview.cpp  (+13 more)
.github/: FUNDING.yml
.github/workflows/: cmake-freebsd-amd64.yml  cmake-linux-amd64-appimage.yml  cmake-windows-x86-x64.yml  deploy-landing-page.yml  test-windows-efi.yml
landing-page/: .gitignore  README.md  index.html
landing-page/assets/css/: style.css
landing-page/assets/js/: main.js
scripts/: create_test_efi_image.sh  test-efi-partition-scan-freebsd.sh  test-efi-partition-scan-linux.sh
tests/: CMakeLists.txt  test_dp_editor_view.cc
translations/: app_en.ts  app_es.ts  app_fr.ts  app_pt.ts  app_zh.ts  translations.qrc
